git i github section

--- a/Laboratorium 1/LAB1.ipynb
+++ b/Laboratorium 1/LAB1.ipynb
@@ -54,7 +54,11 @@
    "metadata": {},
    "source": [
     "### Git i Gihub\n",
-    "Tbd..."
+    "1. Wejdź do wybranej przez siebie lokalizacji.  \n",
+    "2. Uruchom komendę `git clone https://github.com/mwojte/rta-lato-21.git`.  \n",
+    "3. Powstał folder rta-lato-21, w którym będą kody wrzucane na mojego githuba  \n",
+    "4. W celu odświeżenia repozytorium użyj komendy `git pull`  \n",
+    "5. Na stronie https://github.com/mwojte/rta-lato-21 możesz obejrzeć i pobrać kody bez używania git, ale polecam się z tym narzędziem zaznajomić."
    ]
   },
   {
