--- a/Laboratorium 1/LAB1_flask_get.ipynb
+++ b/Laboratorium 1/LAB1_flask_get.ipynb
@@ -2,23 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "sunset-utility",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting requests\n",
+      "  Downloading requests-2.25.1-py2.py3-none-any.whl (61 kB)\n",
+      "\u001b[K     |████████████████████████████████| 61 kB 1.5 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting certifi>=2017.4.17\n",
+      "  Downloading certifi-2020.12.5-py2.py3-none-any.whl (147 kB)\n",
+      "\u001b[K     |████████████████████████████████| 147 kB 2.7 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting urllib3<1.27,>=1.21.1\n",
+      "  Downloading urllib3-1.26.4-py2.py3-none-any.whl (153 kB)\n",
+      "\u001b[K     |████████████████████████████████| 153 kB 16.9 MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting idna<3,>=2.5\n",
+      "  Downloading idna-2.10-py2.py3-none-any.whl (58 kB)\n",
+      "\u001b[K     |████████████████████████████████| 58 kB 6.1 MB/s  eta 0:00:01\n",
+      "\u001b[?25hCollecting chardet<5,>=3.0.2\n",
+      "  Downloading chardet-4.0.0-py2.py3-none-any.whl (178 kB)\n",
+      "\u001b[K     |████████████████████████████████| 178 kB 16.9 MB/s eta 0:00:01\n",
+      "\u001b[?25hInstalling collected packages: urllib3, idna, chardet, certifi, requests\n",
+      "Successfully installed certifi-2020.12.5 chardet-4.0.0 idna-2.10 requests-2.25.1 urllib3-1.26.4\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install requests"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "positive-wheel",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b'{\"features\":[12.0,30.0],\"predicted_class\":1}\\n'\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
-    "response = requests.get(\"http://127.0.0.1:5000/api/v1.0/predict?&sl=85&pl=154\")\n",
+    "response = requests.get(\"http://127.0.0.1:5000/api/v1.0/predict?&sl=12&pl=30\")\n",
     "print(response.content)"
    ]
   },
