--- a/Laboratorium 1/LAB1.ipynb
+++ b/Laboratorium 1/LAB1.ipynb
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "id": "appropriate-tomorrow",
    "metadata": {},
    "outputs": [],
@@ -969,6 +969,67 @@
     "    \n",
     "    def give_raise(self,amount):\n",
     "        self.sal = self.sal + amount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "intense-example",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Emp(Employee):\n",
+    "    def show_name(self):\n",
+    "        return print(self.name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "revolutionary-jumping",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ktos=Emp(\"Ania\",\"MKTG\",5000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "interstate-tennis",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wynagrodzenie: 5000\n",
+      "Wynagrodzenie: 5542\n"
+     ]
+    }
+   ],
+   "source": [
+    "ktos.get_sal()\n",
+    "ktos.give_raise(542)\n",
+    "ktos.get_sal()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "nonprofit-moses",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ania\n"
+     ]
+    }
+   ],
+   "source": [
+    "ktos.show_name()"
    ]
   },
   {
@@ -2737,7 +2798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "id": "purple-fiction",
    "metadata": {},
    "outputs": [
@@ -2758,7 +2819,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
